IF(gtest_BINARY_DIR)
    MESSAGE(STATUS "Using googletest submodule")
    SET(GTEST_FOUND true)
ELSE()
    FIND_PACKAGE(GTest)
ENDIF()
IF(GTEST_FOUND)
    INCLUDE_DIRECTORIES(${gtest_INCLUDE_DIRS})
    ADD_SUBDIRECTORY(src)
ELSE(GTEST_FOUND)
    MESSAGE(WARNING "Google test not found. Tests disabled.")
ENDIF(GTEST_FOUND)
